[package]
name = "runevm"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/axic/runevm"
description = "EVM interpreter compatible with the evm2wasm interface"
publish = false

[dependencies]
ewasm_api = { git = "https://github.com/ewasm/ewasm-rust-api", tag = "0.4.0" }
#ewasm_api = { path = "../ewasm-rust-api" }
evm = { path = "parity-ethereum/ethcore/evm" }
vm = { path = "parity-ethereum/ethcore/vm" }
ethereum-types = "0.3"
parity-bytes = { git = "https://github.com/paritytech/parity-common", rev = "b7e6dd3e48c6ce77" }

[lib]
crate-type = ["cdylib"]
