[package]
name = "runevm"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/axic/runevm"
description = "EVM interpreter compatible with the evm2wasm interface"
edition = "2018"
publish = false

[dependencies]
ewasm_api = "0.10"
evm = { path = "parity-ethereum/ethcore/evm" }
vm = { path = "parity-ethereum/ethcore/vm" }
ethereum-types = "0.4"
parity-bytes = { git = "https://github.com/paritytech/parity-common" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
